[package]
name = "sha-x-n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
